# aeson-quick

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  aeson-quick.cabal  manage.sh  package.yaml  quickson.cabal  stack.yaml
.github/workflows/: haskell.yml
Data/Aeson/: Quick.hs
Data/Aeson/Quick/: Unsafe.hs
bench/: Benchmark.hs
src/Data/: Quickson.hs
src/Data/Aeson/: Quick.hs
src/Data/Aeson/Quick/: Internal.hs
test/: Benchmark.hs  Test.hs  complex.json
