Name:              quickson
Version:           0.3
Build-Type:        Simple
Cabal-Version:     >= 1.2
License:           BSD3
License-File:      LICENSE
Author:            Scott Sadler
Maintainer:        Scott Sadler <scott@scottsadler.de>
Homepage:          https://github.com/ssadler/quickson
Category:          Text, Web, JSON
Synopsis:          Quick JSON extractions with Aeson


Library
  Exposed-modules: Data.Quickson
  hs-source-dirs:  src
  Build-Depends:   base,
                   bytestring,
                   aeson,
                   text,
                   attoparsec
