Name:              quickson
Version:           0.3
Build-Type:        Simple
Cabal-Version:     >= 1.8
License:           BSD3
License-File:      LICENSE
Author:            Scott Sadler
Maintainer:        Scott Sadler <scott@scottsadler.de>
Homepage:          https://github.com/libscott/quickson
Category:          Text, Web, JSON
Synopsis:          Quick JSON extractions with Aeson


Library
  Exposed-modules: Data.Quickson
  hs-source-dirs:  src
  Build-Depends:   base >=4 && <5,
                   bytestring,
                   aeson,
                   text,
                   attoparsec,
                   microlens,
                   microlens-aeson,
                   microlens-platform,
                   vector

test-suite quickson-test
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Test.hs
  build-depends:   quickson,
                   base,
                   bytestring,
                   aeson,
                   text,
                   attoparsec,
                   microlens,
                   microlens-aeson,
                   tasty,
                   tasty-hunit

source-repository head
  type:     git
  location: https://github.com/githubuser/cryptoconditions
